--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
@@ -81,7 +81,7 @@
     
   <div id="services">
     <div class="container">
-        <h1 class="subtitle">My Services</h1>
+        <h1 class="subtitle">My Skills</h1>
         <div class="services-list">
         <div>
             <i class="fa-brands fa-app-store"></i>
