--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <!-------------------------------------Services----------------------------------------------->
     
-  <div id="services">
+  <div id="skills">
     <div class="container">
         <h1 class="subtitle">My Skills</h1>
         <div class="services-list">
