--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
@@ -50,11 +50,9 @@
                      </div>
 
                      <div class="tab-contents active-tab" id="Skills">
-
                         <ul>
                             <li><span>Web Development</span><br>Web app Development</li>
                             <li><span>App Development</span><br>Building Android apps</li>
-
                         </ul>
                      </div>
 
@@ -65,10 +63,8 @@
                      <div class="tab-contents"id="Education">
 
                         <ul>
-                            
                             <li><span>2021-current</span><br>Bsc.CS from SIES Nerul</li>
                             <li><span>2022</span><br>Android Development from PrimeIt</li>
-
                         </ul>
                      </div>
                 </div>
@@ -79,7 +75,7 @@
 
     <!-------------------------------------Services----------------------------------------------->
     
-  <div id="skills">
+  <div id="services">
     <div class="container">
         <h1 class="subtitle">My Skills</h1>
         <div class="services-list">
@@ -109,21 +105,28 @@
                 <img src="work1.jpg">
                 <div class="layer">
                     <h3>Restaurant App</h3>
-                    <p>Zaika is a restaurant app which directly connects the customer to the restaurant without any third party interference.</p>
+                    <p>Zaika is a an android restaurant app which directly connects the customer to the restaurant without any third party interference.</p>
                 </div>
             </div>
             <div class="work">
-                <img src="work2.jpg">
+                <img src="work2.png">
                 <div class="layer">
                     <h3>Main Activity</h3>
                     <p>In this activity User can login if he or she is existing user or else register if new user .</p>
                 </div>
             </div>
             <div class="work">
-                <img src="work3.jpg">
+                <img src="samvaad (2).png">
+                <div class="layer">
+                    <h3>Chat Application</h3>
+                    <p>Samvaad is an android chat application build using java and Firebase  .</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="samvaad1.png">
                 <div class="layer">
                     <h3>Login Activity</h3>
-                    <p>In this acitivity user login with his credentials , User can forget password and reset incase if password forgot .</p>
+                    <p>In this acitivity user enters mobile number to have otp for login .</p>
                 </div>
             </div>
         </div>
@@ -133,9 +136,6 @@
 
 
   <!--------------------------------------------------------Contact------------------------------------------------------------------------>
-
-
-
   <div id="contact">
     <div class="container">
         <div class="row">
